RESOLVED FIXED180935
REGRESSION (r226003): ASSERTION FAILED: !m_importCompleted
https://bugs.webkit.org/show_bug.cgi?id=180935
Summary REGRESSION (r226003): ASSERTION FAILED: !m_importCompleted
Matt Lewis
Reported 2017-12-18 10:31:05 PST
ERROR: Request to remove client-side ServiceWorkerRegistration from non-existent server-side registration /Volumes/Data/slave/sierra-debug/build/Source/WebCore/workers/service/server/SWServer.cpp(421) : void WebCore::SWServer::removeClientServiceWorkerRegistration(WebCore::SWServer::Connection &, ServiceWorkerRegistrationIdentifier) ERROR: SQLite database failed to load from /ServiceWorkerRegistrations.sqlite3 Cause - unable to open database file /Volumes/Data/slave/sierra-debug/build/Source/WebCore/platform/sql/SQLiteDatabase.cpp(90) : bool WebCore::SQLiteDatabase::open(const WTF::String &, bool) ASSERTION FAILED: !m_importCompleted /Volumes/Data/slave/sierra-debug/build/Source/WebCore/workers/service/server/SWServer.cpp(111) : void WebCore::SWServer::registrationStoreImportComplete() 1 0x11302d9dd WTFCrash 2 0x119ea2e99 WebCore::SWServer::registrationStoreImportComplete() 3 0x119ea1e08 WebCore::RegistrationStore::databaseFailedToOpen() 4 0x119ea1ddc WebCore::RegistrationDatabase::databaseFailedToOpen() 5 0x119ebbcaa void WTF::callMemberFunctionForCrossThreadTaskImpl<WebCore::RegistrationDatabase, void (WebCore::RegistrationDatabase::*)(), std::__1::tuple<> >(WebCore::RegistrationDatabase*, void (WebCore::RegistrationDatabase::*)(), std::__1::tuple<>&&, std::__1::integer_sequence<unsigned long>) 6 0x119ebbc29 void WTF::callMemberFunctionForCrossThreadTask<WebCore::RegistrationDatabase, void (WebCore::RegistrationDatabase::*)(), std::__1::tuple<>, std::__1::integer_sequence<unsigned long> >(WebCore::RegistrationDatabase*, void (WebCore::RegistrationDatabase::*)(), std::__1::tuple<>&&) 7 0x119ebbbd0 WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::RegistrationDatabase>(WebCore::RegistrationDatabase&, void (WebCore::RegistrationDatabase::*)())::'lambda'()::operator()() 8 0x119ebbb59 WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::RegistrationDatabase>(WebCore::RegistrationDatabase&, void (WebCore::RegistrationDatabase::*)())::'lambda'()>::call() 9 0x1130499fb WTF::Function<void ()>::operator()() const 10 0x1130490c5 WTF::CrossThreadTask::performTask() 11 0x11304916d WTF::CrossThreadTaskHandler::handleTaskRepliesOnMainThread() 12 0x11304ad98 WTF::CrossThreadTaskHandler::postTaskReply(WTF::CrossThreadTask&&)::$_1::operator()() const 13 0x11304ad59 WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTaskHandler::postTaskReply(WTF::CrossThreadTask&&)::$_1>::call() 14 0x1130499fb WTF::Function<void ()>::operator()() const 15 0x11306cf04 WTF::dispatchFunctionsFromMainThread() 16 0x11306fb45 -[JSWTFMainThreadCaller call] 17 0x7fff915a652a __NSThreadPerformPerform 18 0x7fff8fb463e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 19 0x7fff8fb2765c __CFRunLoopDoSources0 20 0x7fff8fb26b46 __CFRunLoopRun 21 0x7fff8fb26544 CFRunLoopRunSpecific 22 0x7fff91557252 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 23 0x7fff9155712a -[NSRunLoop(NSRunLoop) run] 24 0x7fffa594a89b _xpc_objc_main 25 0x7fffa59492e4 xpc_main 26 0x10b6b8145 main 27 0x7fffa56f1235 start 28 0x1 LEAK: 2 WebPageProxy Started after: https://trac.webkit.org/changeset/226003/webkit
Attachments
Crash Log (62.34 KB, text/plain)
2017-12-18 10:31 PST, Matt Lewis
no flags
Patch (3.10 KB, patch)
2017-12-18 10:48 PST, Brady Eidson
no flags
Matt Lewis
Comment 1 2017-12-18 10:31:52 PST
Created attachment 329653 [details] Crash Log Attached is the crash log.
Radar WebKit Bug Importer
Comment 2 2017-12-18 10:31:57 PST
Radar WebKit Bug Importer
Comment 4 2017-12-18 10:35:16 PST
Radar WebKit Bug Importer
Comment 5 2017-12-18 10:40:23 PST
Brady Eidson
Comment 6 2017-12-18 10:48:17 PST
WebKit Commit Bot
Comment 7 2017-12-18 11:20:43 PST
Comment on attachment 329654 [details] Patch Clearing flags on attachment: 329654 Committed r226064: <https://trac.webkit.org/changeset/226064>
WebKit Commit Bot
Comment 8 2017-12-18 11:20:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.