REGRESSION: ASSERTION FAILED: !m_importCompleted https://bugs.webkit.org/show_bug.cgi?id=180935

Unreviewed bot gardening.

No new tests (Covered by existing tests)

The ASSERT was invalid for database pushes failing to open databases like this, so skip it for that scenario.


* workers/service/server/RegistrationStore.cpp:
(WebCore::RegistrationStore::databaseFailedToOpen):
* workers/service/server/SWServer.cpp:
(WebCore::SWServer::registrationStoreDatabaseFailedToOpen):
* workers/service/server/SWServer.h:


Canonical link: https://commits.webkit.org/196825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226064 268f45cc-cd09-0410-ab3c-d52691b4dbfc